[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python-hmr-headless"
authors = [
    { name = "Mr-Milk", email = "zym.zym1220@gmail.com" },
    { name = "Muspi Merol", email = "me@muspimerol.site" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
urls = { Home = "https://github.com/mr-milk/python-hmr" }
dependencies = ["watchdog"]

[tool.flit.module]
name = "hmr"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["ruff", "pytest", "pytest-cov", "pytest-check", "pytest-xdist"]
